added @b0guslaw 's input header and refactored problem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "testMate.cpp.log.logSentry": "disable_3"
+    "testMate.cpp.log.logSentry": "disable_3",
+    "files.associations": {
+        "chrono": "cpp"
+    }
 }
