--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "command": "C:\\Program Files\\mingw-w64\\mingw64\\bin\\g++.exe",
             "args": [
                 "-g",
-                "${file}",
+                "${workspaceFolder}\\*.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
@@ -17,28 +17,6 @@
                 "$gcc"
             ],
             "group": "build",
-            "detail": "Generated task by Debugger"
-        },
-        {
-            "type": "cppbuild",
-            "label": "C/C++: g++.exe build active file ver(1)",
-            "command": "C:\\Program Files\\mingw-w64\\mingw64\\bin\\g++.exe",
-            "args": [
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
-            ],
-            "options": {
-                "cwd": "C:\\Program Files\\mingw-w64\\mingw64\\bin"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
             "detail": "Generated task by Debugger"
         }
     ],
